...
    <string name="delete_account_confirmation">Are you sure you want to delete your account and data?\nThis action cannot be undone. Your Google account will not be affected.</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="profile_description">Test Profile Description</string>
    <string name="transit_type">Preferred Mode of Transport</string>
    <string name="transit_type_placeholder">transit_type placeholder</string>
    <string name="save">Save</string>
    <string name="skip">Skip</string>
    <string name="loading">Loading…</string>
    <string name="checking_authentication">Checking authentication…</string>
    <string name="successful_profile_update">Profile updated successfully!</string>
...
