...
    val postalCode: String? = null,
)

@Serializable
enum class TransitType {
    @SerializedName("driving")
    DRIVING,

    @SerializedName("walking")
    WALKING,

    @SerializedName("bicycling")
    BICYCLING,
...
